dataset1235/2025-2/1153765216/users/2357208246/executions/2372395858_3348296077.log
== RUN (2025-08-28 18:22:21)
-- CODE: 
valor_estacionamento = 15 #por hora
taxa_fixa = 5

tempo_estacionado = float(input())
valor_inicial = (tempo_estacionado*valor_estacionamento) + taxa_fixa
valor_com_taxa = valor_inicial + (valor_inicial * 0.2)
print(round(valor_total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor_total, 2))
                ^^^^^^^^^^^
NameError: name 'valor_total' is not defined
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor_total, 2))
                ^^^^^^^^^^^
NameError: name 'valor_total' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor_total, 2))
                ^^^^^^^^^^^
NameError: name 'valor_total' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor_total, 2))
                ^^^^^^^^^^^
NameError: name 'valor_total' is not defined
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor_total, 2))
                ^^^^^^^^^^^
NameError: name 'valor_total' is not defined
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(valor_total, 2))
                ^^^^^^^^^^^
NameError: name 'valor_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:32:21)
-- CODE: 
valor_estacionamento = 15 #por hora
taxa_fixa = 5

tempo_estacionado = float(input())
valor_inicial = (tempo_estacionado*valor_estacionamento) + taxa_fixa
valor_com_taxa = valor_inicial + (valor_inicial * 0.2)

print(round(valor_com_taxa, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
456.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:41:59)
-- CODE: 
valor_estacionamento = 15 #por hora
taxa_fixa = 5

tempo_estacionado = float(input()
valor_inicial = (tempo_estacionado*valor_estacionamento) + taxa_fixa
valor_com_taxa = valor_inicial + (valor_inicial * 0.2)

print(round(valor_com_taxa, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 4
    tempo_estacionado = float(input()
                             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 4
    tempo_estacionado = float(input()
                             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 4
    tempo_estacionado = float(input()
                             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 4
    tempo_estacionado = float(input()
                             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 4
    tempo_estacionado = float(input()
                             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 4
    tempo_estacionado = float(input()
                             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
